--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Gunting Batu Kertas</title>
+    <title>BATU GUNTNG KERTAS</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="lung.css">
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 </head>
 <body>
     <header class="header">
-        <h1>Gunting Batu Kertas</h1>
+        <h1>BATU GUNTNG KERTAS</h1>
     </header>
     <div class="container">
         <div class="score-container">
@@ -17,9 +17,9 @@
             <span class="com">COM</span>
         </div>
         <div class="buttons">
-            <button id="paper" class="bn" onclick="game(this.value)" value="kertas"><i class="far fa-hand-paper"></i></button>
-            <button id="rock" class="bn" onclick="game(this.value)" value="Batu"><i class="far fa-hand-rock"></i></button>
-            <button id="scissors" class="bn" onclick="game(this.value)" value="gunting"><i class="far fa-hand-scissors"></i></button>
+            <button id="paper" class="bn" onclick="game(this.value)" value="paper"><i class="far fa-hand-paper"></i></button>
+            <button id="rock" class="bn" onclick="game(this.value)" value="rock"><i class="far fa-hand-rock"></i></button>
+            <button id="scissors" class="bn" onclick="game(this.value)" value="scissors"><i class="far fa-hand-scissors"></i></button>
        </div>
        <div id="challenge">
            <div id="you">
